--- a/css/footer.css
+++ b/css/footer.css
@@ -79,3 +79,61 @@
     background: url(../imgs/footer/公众号.png) no-repeat;
     background-size: 100% 100%;
 }
+
+@media screen and (max-width: 499px) {
+    .footer-container .footer-content {
+        position: relative;
+        /* display: block; */
+        flex-wrap: wrap;
+        justify-content: start;
+    }
+
+    .footer-menu-content-img {
+        position: absolute;
+        top: 2rem;
+        right: 0rem;
+        margin-right: 0 !important;
+    }
+
+    .footer-container .footer-content .footer-logo-content {
+        width: 100%;
+        margin-bottom: 4rem;
+    }
+
+    .footer-container .footer-content .footer-menu-content {
+        margin-right: 2rem;
+    }
+
+    .footer-container .footer-content .footer-logo-content .footer-logo {
+        height: 3.85rem;
+        width: 15.25rem;
+    }
+
+    .footer-container .footer-content .footer-logo-content .footer-company,
+    .footer-container .footer-content .footer-menu-content .footer-menu-title {
+        font-size: 1.6rem;
+        font-family: PingFang SC;
+        font-weight: 500;
+        color: #FFFFFF;
+    }
+
+    .footer-container .footer-content .footer-logo-content .footer-address {
+        font-size: 1.3rem;
+        font-family: PingFang SC;
+        font-weight: 500;
+        color: #FFFFFF;
+        margin-top: 1rem;
+    }
+
+    .footer-container .footer-content .footer-menu-content .footer-menu-item {
+        font-size: 1.3rem;
+        font-family: PingFang SC;
+        font-weight: 500;
+        color: #CBCBCB;
+        line-height: 2.4rem;
+    }
+    .footer-container .footer-content .footer-menu-content .footer-menu-img{
+        width: 7rem;
+        height: 7rem;
+    }
+}
