--- a/css/header.css
+++ b/css/header.css
@@ -4,7 +4,9 @@
     background-color: white;
     display: flex;
     align-items: center;
-    justify-content: center
+    justify-content: center;
+    z-index: 101;
+
 }
 
 .header-container .my-container {
@@ -55,4 +57,102 @@
     text-align: center;
     cursor: pointer;
     user-select: none;
+}
+
+.header-container .my-container .mob-menu-button {
+    display: none;
+}
+
+.mobile-menu {
+    display: none;
+    position: fixed;
+    top: 4.9rem;
+    left: 0;
+    width: 100%;
+    z-index: 99;
+    height: calc(100vh - 4.9rem);
+    background: hsla(0, 0%, 100%, .95);
+}
+
+.header-mobile-menu-item {
+    display: block;
+    width: 100%;
+    height: auto;
+    padding: 1rem 2rem;
+    border-bottom: 1px solid rgba(0, 0, 0, .05);
+    font-size: 1.5rem;
+    color: #333333;
+    line-height: 2;
+    text-decoration: none !important;
+}
+
+@media screen and (max-width: 499px) {
+
+    .header-container .my-container .header-menu-item-box {
+        display: none;
+    }
+
+    .header-container .my-container .header-menu-btn {
+        height: 2.5rem;
+        line-height: 2.5rem;
+    }
+
+    .header-container .my-container .mob-menu-button {
+        position: relative;
+        display: block;
+        z-index: 100;
+        padding-top: 1.4rem;
+        height: 3rem;
+        margin-left: 2rem;
+        cursor: pointer;
+    }
+
+    .mob-menu-button span {
+        display: block;
+        position: relative;
+        height: 0.3rem;
+        width: 2.5rem;
+        background: #535353;
+        transition: all .3s;
+    }
+
+    .mob-menu-button span:before {
+        content: '';
+        display: block;
+        position: absolute;
+        height: 0.3rem;
+        width: 2.5rem;
+        top: -0.8rem;
+        background: #535353;
+        transition: all .3s;
+    }
+
+    .mob-menu-button span:after {
+        content: '';
+        display: block;
+        position: absolute;
+        height: 0.3rem;
+        width: 2.5rem;
+        bottom: -0.8rem;
+        background: #535353;
+        transition: all .3s;
+    }
+
+    .mob-menu-button.on span {
+        background: none;
+    }
+
+    .mob-menu-button.on span:before {
+        top: 0;
+        transform: rotate(45deg);
+    }
+
+    .mob-menu-button.on span:after {
+        bottom: 0;
+        transform: rotate(-45deg);
+    }
+
+    .mobile-menu-open {
+        display: block;
+    }
 }
