--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,12 @@
     margin: 0px;
 }
 
+*,
+::after,
+::before {
+    box-sizing: border-box;
+}
+
 html,
 body {
     width: 100%;
@@ -16,45 +22,7 @@ a {
 }
 
 .my-container {
-    width: 1200px;
-}
-
-
-@media screen and (max-width:1200px) {
-
-    html,
-    body {
-        min-width: 1000px;
-        font-size: 16px;
-    }
-
-    .my-container {
-        width: 960px;
-    }
-
-}
-
-@media screen and (max-width:1000px) {
-
-    html,
-    body {
-        min-width: 768px;
-        font-size: 13px;
-    }
-
-    .my-container {
-        width: 728px;
-    }
-    .research-box .research-card{
-        width: 17rem !important;
-    }
-    .research-box .research-card .card-img-top{
-        width: 17rem !important;
-    }
-    .more-type-box .report-type-box .type-card{
-        width: 12rem !important;
-    }
-
+    width: 1160px;
 }
 
 .content {
@@ -176,4 +144,107 @@ a {
     font-weight: bold;
     color: #313131;
     margin: 0 0.5rem;
+    text-align: center;
+}
+
+@media screen and (max-width:1200px) {
+
+    html,
+    body {
+        min-width: 1000px;
+        font-size: 16px;
+    }
+
+    .my-container {
+        width: 960px;
+    }
+
+}
+
+@media screen and (max-width:1000px) {
+
+    html,
+    body {
+        min-width: 768px;
+        font-size: 13px;
+    }
+
+    .my-container {
+        width: 728px;
+    }
+
+    .research-box .research-card {
+        width: 17rem !important;
+    }
+
+    .research-box .research-card .card-img-top {
+        width: 17rem !important;
+    }
+
+    .more-type-box .report-type-box .type-card {
+        width: 12rem !important;
+    }
+
+}
+
+@media screen and (max-width: 499px) {
+
+    html,
+    body {
+        min-width: unset;
+        font-size: 10px;
+    }
+
+    .my-container {
+        width: calc(100% - 20px);
+    }
+
+    .line-title .left-line,
+    .line-title .right-line {
+        display: none;
+    }
+
+    .line-title .title {
+        font-size: 2.4rem !important;
+        font-family: PingFang SC !important;
+        font-weight: bold !important;
+        color: #313131 !important;
+    }
+
+    .sm-banner-content-text {
+        font-size: 2.4rem;
+        font-family: PingFang SC;
+        font-weight: 800;
+        color: #FFFFFF;
+        text-align: center;
+    }
+
+    .sm-banner-btn {
+        width: 13.3rem;
+        height: 3.7rem;
+        font-size: 1.9rem;
+        font-family: PingFang SC;
+        font-weight: 500;
+        color: #FFFFFF;
+        line-height: 3.7rem;
+    }
+
+    .banner-btn {
+        width: 13.3rem;
+        height: 3.7rem;
+        background: #FFFFFF;
+        font-size: 1.9rem;
+        font-family: PingFang SC;
+        font-weight: 500;
+        color: #006AB2;
+        line-height: 3.7rem;
+    }
+    .banner-content-text {
+        width: calc(100% - 1rem);
+        height: auto;
+        padding: 0.5rem 1.5rem;
+        font-size: 1.9rem;
+        font-family: PingFang SC;
+        font-weight: 500;
+    }
 }
