--- a/css/more.css
+++ b/css/more.css
@@ -14,10 +14,12 @@
 
 .more-type-box {
     width: 100%;
+    min-height: calc(100vh - 29.4rem);
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 4.5rem 0;
+    box-sizing: border-box;
 }
 
 .more-type-box .report-type-box {
@@ -61,4 +63,49 @@
     font-weight: 500;
     color: #787878;
     text-align: center;
+}
+
+@media screen and (max-width: 499px) {
+    .banner-content {
+        height: 9.6rem;
+        background: url(../imgs/more/内页banner.png) no-repeat;
+        background-size: 100% 100%;
+    }
+
+    .banner-content-title {
+        font-size: 1.9rem;
+        font-family: PingFang SC;
+        font-weight: bold;
+        color: #FFFFFF;
+    }
+
+    .more-type-box {
+        min-height: unset;
+    }
+
+    .more-type-box .report-type-box {
+        margin-top: 4.3rem;
+    }
+
+    .more-type-box .report-type-box .type-card {
+        flex: none;
+        width: 26.6rem !important;
+        height: 26.6rem;
+        background: #FFFFFF;
+        box-shadow: 0px 0.2rem 1.1rem 0px rgba(49, 170, 255, 0.3);
+        border-radius: 0.7rem;
+        margin-bottom: 4.3rem;
+    }
+
+    .more-type-box .report-type-box .type-card .logo-box {
+        width: 7rem;
+        height: 7rem;
+    }
+
+    .more-type-box .report-type-box .type-card .type-text {
+        font-size: 1.9rem;
+        font-family: PingFang SC;
+        font-weight: 500;
+        color: #787878;
+    }
 }
