--- a/css/more.css
+++ b/css/more.css
@@ -77,6 +77,7 @@
         font-family: PingFang SC;
         font-weight: bold;
         color: #FFFFFF;
+        text-align: center;
     }
 
     .more-type-box {
