--- a/css/home.css
+++ b/css/home.css
@@ -116,7 +116,7 @@
     width: 100%;
     height: 15rem;
     padding-top: 5rem;
-    margin-top: 1rem;
+    margin-top: 3rem;
     background: url(../imgs/home/标题装饰.png) no-repeat;
     background-size: 30rem;
     background-position: center;
@@ -139,7 +139,7 @@
 .structure-box {
     height: 30rem;
     width: 100%;
-    margin: 2rem 0;
+    margin: 2rem 0 5rem 0;
     display: flex;
     align-items: center;
 }
@@ -400,21 +400,22 @@
     border: 1px solid #006AB2;
     border-radius: 0.2rem;
     font-size: 0.9rem;
-    ;
     font-family: PingFang;
     font-weight: 500;
     color: #006AB2;
-    text-align: center;
-    line-height: 2rem;
     position: absolute;
     bottom: 1.6rem;
     left: calc(50% - 3.6rem);
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .problems-box {
     padding: 2.5rem 0;
     width: 100%;
+    margin-top: 5rem;
 }
 
 .problems-box .problems-card-box {
